samples/_failures_safe/1761434450_b66a0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb76cea8.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_cb76cea8.c:165:9: error: expected declaration or statement at end of input
  165 |         case TOKEN_OPERATOR:
      |         ^~~~
./samples/SAFE/__tmp_cb76cea8.c:165:9: error: expected declaration or statement at end of input
